(library
 (name sihl_example_issues)
 (public_name sihl_example_issues)
 (libraries
  base
   sihl
   sihl_email
   sihl_email_repo_postgresql
   sihl_user
   sihl_user_repo_postgresql
  )
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_sexp_conv
   tyxml-ppx
   ppx_string_interpolation
   )
  )
 )
