(library
 (name sihl_example_issues)
 (public_name sihl_example_issues)
 (libraries
  base
   sihl
   sihl_postgresql
   sihl_admin
   sihl_session
   sihl_session_postgresql
   sihl_email
   sihl_email_postgresql
   sihl_user
   sihl_user_postgresql
  )
 (preprocess
  (pps
   ppx_rapper
   ppx_fields_conv
   ppx_deriving_yojson
   ppx_sexp_conv
   ppx_string_interpolation
   )
  )
 )
